PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/Opportunity_Contact__c.object-meta.xml
<CustomObject>
    <description>Investor Contact relationship - Contacts tied to an Opportunity that has been won; to indicate access to Investor Data Room</description>
    <label>Investor Contact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investor Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>