PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Capital_Calls__c.field-meta.xml
<CustomField>
    <fullName>Capital_Calls__c</fullName>
    <description>How the Investor would like to receive Capital Call notices.</description>
    <inlineHelpText>How the Investor would like to receive Capital Call notices.</inlineHelpText>
    <label>Capital Calls</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email and Alert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>