PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Contact_Name_Form__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Form__c</fullName>
    <label>Contact Name - Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>