PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Distributions__c.field-meta.xml
<CustomField>
    <fullName>Distributions__c</fullName>
    <description>How the Investor wish to receive Distribution notices.</description>
    <inlineHelpText>How the Investor wish to receive Distribution notices.</inlineHelpText>
    <label>Distributions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Email and Alert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>