PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Email_Form__c.field-meta.xml
<CustomField>
    <fullName>Email_Form__c</fullName>
    <label>Email - Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>