PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Fund_Sleeve__c.field-meta.xml
<CustomField>
    <fullName>Fund_Sleeve__c</fullName>
    <description>What sleeve does the Investor belong to.</description>
    <inlineHelpText>What sleeve does the Investor belong to.</inlineHelpText>
    <label>xFund Sleeve</label>
    <length>10</length>
    <type>Text</type>
</CustomField>