PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Intralinks__c.field-meta.xml
<CustomField>
    <fullName>Intralinks__c</fullName>
    <description>Intralinks access</description>
    <inlineHelpText>Type of Intralinks access.</inlineHelpText>
    <label>Intralinks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access and Alerts</fullName>
            </value>
            <value>
                <fullName>Access only, no Alerts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>