PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Investment_Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Investment_Vehicle_ID__c</fullName>
    <description>Investment Vehicle ID used by Mass Opportunity Creation [BF-6]</description>
    <formula>Investor_Opportunity__r.Investment_Vehicle__c</formula>
    <inlineHelpText>Investment Vehicle ID used by Mass Opportunity Creation</inlineHelpText>
    <label>Investment Vehicle ID</label>
    <type>Text</type>
</CustomField>