PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Investor (Legal Name from W-8/W-9)</description>
    <inlineHelpText>Investor (Legal Name from W-8/W-9)</inlineHelpText>
    <label>xLegal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>