PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Limited_Partner_LP_Name_Form__c.field-meta.xml
<CustomField>
    <fullName>Limited_Partner_LP_Name_Form__c</fullName>
    <inlineHelpText>text field created to populate the LP name of the contact in Eform</inlineHelpText>
    <label>Limited Partner (LP) Name - Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>