PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Notifications_to_be_received_Form__c.field-meta.xml
<CustomField>
    <fullName>Notifications_to_be_received_Form__c</fullName>
    <label>Notifications to be received - Form</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capital Calls via Intralinks</fullName>
            </value>
            <value>
                <fullName>Distributions via Intralinks</fullName>
            </value>
            <value>
                <fullName>Reports &amp; Capital Accounts via Intralinks</fullName>
            </value>
            <value>
                <fullName>Tax Reporting via Intralinks</fullName>
            </value>
            <value>
                <fullName>Legal Documents &amp; Compliance Matters via Intralinks</fullName>
            </value>
            <value>
                <fullName>Welcome Letter</fullName>
            </value>
            <value>
                <fullName>General Communications and Fund Updates</fullName>
            </value>
            <value>
                <fullName>Annual Meeting Notice</fullName>
            </value>
            <value>
                <fullName>Conference Calls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>