PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number pulled from the Contact record.</description>
    <formula>Contact__r.Phone</formula>
    <inlineHelpText>Phone number pulled from the Contact record.</inlineHelpText>
    <label>Phone</label>
    <type>Text</type>
</CustomField>