PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Reports_Capital_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Reports_Capital_Accounts__c</fullName>
    <description>How the investor wants to receive Reports.</description>
    <inlineHelpText>How the investor wants to receive Reports.</inlineHelpText>
    <label>Reports &amp; Capital Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Email and Alert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>