PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/Subscriber_s_Legal_Name_Form__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_s_Legal_Name_Form__c</fullName>
    <label>Subscriber&#39;s Legal Name - Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>