PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/fields/zzWorkflowActivate__c.field-meta.xml
<CustomField>
    <fullName>zzWorkflowActivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzWorkflowActivate</label>
    <type>Checkbox</type>
</CustomField>