PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Name__c</columns>
    <columns>Investor_Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Main_Contact__c</columns>
    <columns>Tax_Forms__c</columns>
    <columns>LPAC__c</columns>
    <columns>Notes__c</columns>
    <columns>Authorized_Person_Form__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>