PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/listViews/BIF_III_Contacts.listView-meta.xml
<ListView>
    <fullName>BIF_III_Contacts</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Investor_Opportunity__c</columns>
    <columns>Contact__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Role__c</columns>
    <columns>Main_Contact__c</columns>
    <columns>Copy_on_Emails__c</columns>
    <columns>Conference_Call__c</columns>
    <columns>Fund_Sleeve_Auto__c</columns>
    <columns>Intralinks_Folder_Name_Auto__c</columns>
    <columns>LPAC__c</columns>
    <columns>Tax_Forms__c</columns>
    <columns>Legal__c</columns>
    <columns>Reports_Capital_Accounts__c</columns>
    <columns>Fund_Updates__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Investment_Vehicle__c</field>
        <operation>contains</operation>
        <value>BIF III</value>
    </filters>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>contains</operation>
        <value>8</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Samantha Curtin</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>BIF III Contacts</label>
    <sharedTo>
        <group>PFG_Support_Group</group>
        <role>PFG</role>
        <role>PFG_CRM</role>
        <role>PFG_Exec</role>
        <role>SMP</role>
    </sharedTo>
</ListView>