PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/listViews/BREF_V_Contacts.listView-meta.xml
<ListView>
    <fullName>BREF_V_Contacts</fullName>
    <columns>NAME</columns>
    <columns>Inactive__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Investor_Opportunity__c</columns>
    <columns>Contact__c</columns>
    <columns>Role__c</columns>
    <columns>Main_Contact__c</columns>
    <columns>Copy_on_Emails__c</columns>
    <columns>Conference_Call__c</columns>
    <columns>Notes__c</columns>
    <columns>Tax_Forms__c</columns>
    <columns>Legal__c</columns>
    <columns>Reports_Capital_Accounts__c</columns>
    <columns>Intralinks__c</columns>
    <columns>Fund_Updates__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>BREF V</value>
    </filters>
    <label>BREF V Contacts</label>
    <sharedTo>
        <role>PFG</role>
        <role>PFG_CRM</role>
        <role>PFG_Exec</role>
        <role>SMP</role>
    </sharedTo>
</ListView>