PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/listViews/BSREP_I_II_Investor_Contacts.listView-meta.xml
<ListView>
    <fullName>BSREP_I_II_Investor_Contacts</fullName>
    <columns>Investor_Opportunity__c</columns>
    <columns>Contact__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Main_Contact__c</columns>
    <columns>Conference_Call__c</columns>
    <columns>Copy_on_Emails__c</columns>
    <columns>LPAC__c</columns>
    <columns>Notes__c</columns>
    <columns>Tax_Forms__c</columns>
    <columns>Legal__c</columns>
    <columns>Reports_Capital_Accounts__c</columns>
    <columns>Intralinks__c</columns>
    <columns>Fund_Updates__c</columns>
    <columns>Distributions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Investment_Vehicle__c</field>
        <operation>contains</operation>
        <value>BSREP</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>BSREP I and II Investor Contacts</label>
    <sharedTo>
        <role>PFG</role>
        <role>PFG_CRM</role>
        <role>PFG_Exec</role>
        <role>SMP</role>
    </sharedTo>
</ListView>