PROD-12-18-19/force-app/main/default/objects/Opportunity_Contact__c/listViews/Main_Contacts_MD.listView-meta.xml
<ListView>
    <fullName>Main_Contacts_MD</fullName>
    <columns>Opportunity_Owner__c</columns>
    <columns>NAME</columns>
    <columns>Investor_Opportunity__c</columns>
    <columns>Contact__c</columns>
    <columns>Investor_Day__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Main_Contact__c</columns>
    <columns>Conference_Call__c</columns>
    <columns>Copy_on_Emails__c</columns>
    <columns>LPAC__c</columns>
    <columns>Notes__c</columns>
    <columns>Legal__c</columns>
    <columns>Reports_Capital_Accounts__c</columns>
    <columns>Intralinks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Main_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Opportunity_Owner__c</field>
        <operation>equals</operation>
        <value>MD</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Main Contacts - MD</label>
    <sharedTo>
        <role>PFG</role>
        <role>PFG_CRM</role>
        <role>PFG_Exec</role>
        <role>SMP</role>
    </sharedTo>
</ListView>